# asia-flux-modis

./: .gitignore  Cargo.toml
src/: data.rs  main.rs
src/scripts/: define_metadata.rs  get_modis_data.rs  mod.rs  run.rs
