[package]
name = "asia_flux_modis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.0"
chrono = "0.4.23"
byteorder = "1.4.3"
bytemuck = "1.13.1"
rayon = "1.7.0"
serde = { version = "1.0.188", features = ["derive"] }
